--- a/styles/db-theme/components/_footer.scss
+++ b/styles/db-theme/components/_footer.scss
@@ -6,6 +6,7 @@
   background-image: url('DB_Footer_Newsletter_bg-v04-16936x2800.jpg');
   background-position: center;
   background-repeat: no-repeat;
+  background-color: #0A070E;
   background-size: auto 100%;
 
   @media only screen and (max-width: 1080px) {
