--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -27,3 +27,9 @@
 @import './db-theme/pages/page--media';
 @import './db-theme/pages/page--blog-single';
 @import './db-theme/pages/page--hairy-dispatch';
+
+// sections
+@import './db-theme/sections/static-home-hero-banner';
+@import './db-theme/sections/static-discover-and-select';
+@import './db-theme/sections/static-rock-n-roll-resurrected';
+@import './db-theme/sections/static-explore-old-columbus';
