--- a/sections/site-cart.liquid
+++ b/sections/site-cart.liquid
@@ -1,4 +1,4 @@
-<div class="db-shopping-cart">
+<div class="db-cart-drawer site-cart">
   <div class="db-cart-overlay"
     @click="closeCart();">
   </div>
@@ -296,5 +296,5 @@
     updated() {},
   };
 
-  const DB_Cart_App = Vue.createApp(DB_Cart_Options).mount('.db-shopping-cart');
+  const DB_Cart_App = Vue.createApp(DB_Cart_Options).mount('.db-cart-drawer');
 </script>
