--- a/sections/site-header.liquid
+++ b/sections/site-header.liquid
@@ -31,7 +31,7 @@
         </button>
         <a class="db-site-link"
           title="Deadbeat"
-          href="{{ shop.url }}">
+          href="/">
           <img class="db-site-logo db-img"
             alt="Deadbeat"
             title="Deadbeat"
@@ -149,7 +149,7 @@
           <div class="db-inner-row">
             <a class="db-menu-link"
               title="Privacy Policy"
-              href="{{ shop.url }}/pages/privacy-policy"
+              href="/pages/privacy-policy"
               target="_blank">
               Privacy Policy
             </a>
@@ -168,7 +168,7 @@
             </svg>
             <a class="db-menu-link"
               title="Terms of Use"
-              href="{{ shop.url }}/pages/terms-of-use"
+              href="/pages/terms-of-use"
               target="_blank">
               Terms of Use
             </a>
