--- a/sections/static-blog-single.liquid
+++ b/sections/static-blog-single.liquid
@@ -1,4 +1,4 @@
-<section class="db-section db-section--blog-single">
+<section class="db-section db-section--static-blog-single">
   <div class="db-container">
     <template v-if="article.image">
       <img class="blog-featured-img db-img"
