--- a/styles/db-theme/pages/_page--emporium.scss
+++ b/styles/db-theme/pages/_page--emporium.scss
@@ -1,4 +1,4 @@
-.db-page--merch-store {
+.db-page--emporium {
 
   .db-section--merch-store-search {
     // background-image: url('Merch-Store_Search_bg-v01-1900x461.jpg');
