--- a/templates/page.explore-oc.liquid
+++ b/templates/page.explore-oc.liquid
@@ -1,3 +1,5 @@
-<main class="db-main site-main">
+<main class="db-main site-main db-page--{{ page.handle }}">
+
   {% section 'page-explore-oc' %}
+
 </main>
