--- a/templates/page.liquid
+++ b/templates/page.liquid
@@ -1,4 +1,4 @@
-<main class="db-main site-main">
+<main class="db-main site-main db-page--{{ page.handle }}">
   <h1>
     {{ page.title }}
   </h1>
