--- a/styles/db-theme/sections/static-home-hero-banner.scss
+++ b/styles/db-theme/sections/static-home-hero-banner.scss
@@ -104,14 +104,14 @@
                 }
 
                 &::before {
-                  color: $primaryColor;
+                  color: $primary-color;
                   animation: glitchTop 1s linear infinite;
                   // -webkit-clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
                   // clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
                 }
 
                 &::after {
-                  color: $secondaryColor;
+                  color: $secondary-color;
                   animation: glitchBotom 1.5s linear infinite;
                   // -webkit-clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
                   // clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
