--- a/templates/page.hairy-dispatch.liquid
+++ b/templates/page.hairy-dispatch.liquid
@@ -1,31 +1,17 @@
-<main class="db-main site-main db-page--hairy-dispatch">
+<main class="db-main site-main db-page--{{ page.handle }}">
 
   {% section 'static-blog-listing' %}
 
 </main>
 <script>
-  const DB_SF_Page_HairyDispatch_Options = {
-    name: 'DB SF Page HairyDispatch Options',
-    data() {
-      return {
-      }
-    },
-    methods: {
-      loadPage() {
-        console.log('loadPage');
-        setTimeout(() => {
-          document.querySelector('.db-site-loader').classList.remove('--show');
-          // document.querySelector('.db-section--banner').classList.add('--animate-now');
-          document.querySelector('.db-header').classList.add('--animate-now');
-        }, 3000);
-      },
-    },
-    computed: {},
-    created() {
-      this.loadPage();
-    },
-    mounted() {},
+  const loadPage = () => {
+    console.log('loadPage');
+    setTimeout(() => {
+      document.querySelector('.db-site-loader').classList.remove('--show');
+      // document.querySelector('.db-section--banner').classList.add('--animate-now');
+      document.querySelector('.db-header').classList.add('--animate-now');
+    }, 3000);
   };
 
-  Vue.createApp(DB_SF_Page_HairyDispatch_Options).mount('.db-page--hairy-dispatch');
+  loadPage();
 </script>
