--- a/templates/page.media.liquid
+++ b/templates/page.media.liquid
@@ -1,4 +1,4 @@
-<main class="db-main site-main db-page--media">
+<main class="db-main site-main db-page--{{ page.handle }}">
 
   <section class="db-section db-section--media-article">
     <div class="db-container">
@@ -57,28 +57,14 @@
 
 </main>
 <script>
-  const DB_SF_Page_Media_Options = {
-    name: 'DB SF Page Media Options',
-    data() {
-      return {
-      }
-    },
-    methods: {
-      loadPage() {
-        console.log('loadPage');
-        setTimeout(() => {
-          document.querySelector('.db-site-loader').classList.remove('--show');
-          // document.querySelector('.db-section--banner').classList.add('--animate-now');
-          document.querySelector('.db-header').classList.add('--animate-now');
-        }, 3000);
-      },
-    },
-    computed: {},
-    created() {
-      this.loadPage();
-    },
-    mounted() {},
+  const loadPage = () => {
+    console.log('loadPage');
+      setTimeout(() => {
+      document.querySelector('.db-site-loader').classList.remove('--show');
+      // document.querySelector('.db-section--banner').classList.add('--animate-now');
+      document.querySelector('.db-header').classList.add('--animate-now');
+    }, 3000);
   };
 
-  Vue.createApp(DB_SF_Page_Media_Options).mount('.db-page--media');
+  loadPage();
 </script>
